# anky_sojourn_9

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
artifacts/arweave/: canonical_versions.json
clients/app-spec/: README.md
clients/ts-sdk/: README.md  package.json  tsconfig.json
clients/ts-sdk/src/: index.ts
constitution/: CHANGELOG.md  DECISIONS.md  SOJOURN_9.md
constitution/versions/: README.md
deployments/: devnet.json  mainnet.json
docs/: protocol_surface.md  seal_v1_design.md  soulbound_frontier.md
idl/: README.md
program/: Anchor.toml  Cargo.toml
program/programs/sojourn_9/: Cargo.toml
program/programs/sojourn_9/src/: constants.rs  errors.rs  events.rs  lib.rs
program/programs/sojourn_9/src/instructions/: claim_reward.rs  initialize_season.rs  mod.rs  seal_anky.rs
program/programs/sojourn_9/src/state/: daily_seal.rs  mod.rs  reward_claim.rs  season_config.rs
program/programs/sojourn_9/src/utils/: compression.rs  mod.rs  pda.rs  time.rs
scripts/: sync-idl.sh
